change: dark mode fix

--- a/apps/landing/app/globals.css
+++ b/apps/landing/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply dark;
+}
+
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
